17 August 2012: Wouter
	- Add documentation to libunbound for default nonuse of resolv.conf.

2 August 2012: Wouter
	- trunk has 1.4.19 under development (fixes from 1 aug and 31 july
	are for 1.4.19).
	- iana portlist updated.

1 August 2012: Wouter
	- Fix openssl race condition, initializes openssl locks, reported
	  by Einar Lonn and Patrik Wallstrom.

31 July 2012: Wouter
	- Improved forward-first and stub-first documentation.
	- Fix that enables modules to register twice for the same
	  serviced_query, without race conditions or administration issues.
	  This should not happen with the current codebase, but it is robust.
	- Fix forward-first option where it sets the RD flag wrongly.
	- added manpage links for libunbound calls (Thanks Paul Wouters).

30 July 2012: Wouter
	- tag 1.4.18rc2 (became 1.4.18 release at 2 august 2012).

27 July 2012: Wouter
	- unbound-host works with libNSS
	- fix bogus nodata cname chain not reported as bogus by validator,
	  (Thanks Peter van Dijk).

26 July 2012: Wouter
	- iana portlist updated.
	- tag 1.4.18rc1.

25 July 2012: Wouter
	- review fix for libnss, check hash prefix allocation size.

23 July 2012: Wouter
	- fix missing break for GOST DS hash function.
	- implemented forward_first for the root.

20 July 2012: Wouter
	- Fix bug#452 and another assertion failure in mesh.c, makes
	  assertions in mesh.c resist duplicates.  Fixes DS NS search to
	  not generate duplicate sub queries.

19 July 2012: Willem
	- Fix bug#454: Remove ACX_CHECK_COMPILER_FLAG from configure.ac,
	  if CFLAGS is specified at configure time then '-g -O2' is not
	  appended to CFLAGS, so that the user can override them.

18 July 2012: Willem
	- Fix libunbound report of errors when in background mode.

11 July 2012: Willem
	- updated iana ports list.

9 July 2012: Willem
	- Add flush_bogus option for unbound-control

6 July 2012: Wouter
	- Fix validation of qtype DS queries that result in no data for
	  non-optout NSEC3 zones.

4 July 2012: Wouter